# kernel

./: .gitignore  .mailmap  CREDITS  MAINTAINERS  Makefile  README  build_kernel.sh  makedist.sh
UEFI-CA-CERT/: UOS-UEFI-RSA-ARM.pem
arch/: Kconfig
block/: bdev.c  blk-mq.c  blk-settings.c  blk-sysfs.c  blk-zoned.c  elevator.c  ioctl.c
debian/: README.Debian  README.source  changelog  control  control.md5sum  copyright  files  libcpupower1.symbols  linux-doc.maintscript  linux-headers-4kc-malta.maintscript  linux-headers-5kc-malta.maintscript  linux-headers-6.6.36-4kc-malta.postinst  linux-headers-6.6.36-5kc-malta.postinst  linux-headers-6.6.36-686-pae.postinst  linux-headers-6.6.36-686.postinst  linux-headers-6.6.36-alpha-generic.postinst  linux-headers-6.6.36-alpha-smp.postinst  linux-headers-6.6.36-amd64.postinst  linux-headers-6.6.36-arm64.postinst  linux-headers-6.6.36-armmp-lpae.postinst  linux-headers-6.6.36-armmp.postinst  linux-headers-6.6.36-cloud-amd64.postinst  linux-headers-6.6.36-cloud-arm64.postinst  linux-headers-6.6.36-loong64.postinst  linux-headers-6.6.36-loongson-3.postinst  linux-headers-6.6.36-m68k.postinst  linux-headers-6.6.36-mips32r2eb.postinst  linux-headers-6.6.36-mips32r2el.postinst  linux-headers-6.6.36-mips64r2eb.postinst  linux-headers-6.6.36-mips64r2el.postinst  linux-headers-6.6.36-mips64r6el.postinst  linux-headers-6.6.36-octeon.postinst  linux-headers-6.6.36-parisc.postinst  linux-headers-6.6.36-parisc64.postinst  linux-headers-6.6.36-powerpc-smp.postinst  linux-headers-6.6.36-powerpc.postinst  linux-headers-6.6.36-powerpc64.postinst  linux-headers-6.6.36-powerpc64le.postinst  (+342 more)
deepin/: OWNERS
drivers/gpu/drm/arise/linux/interface/: CMakeLists.txt  context_gf.c  context_gf.h  gf_bufmgr.c  gf_bufmgr.h  gf_dump.c  gf_keinterface.c  gf_keinterface.h  gf_list.h  gf_trace.c  gf_trace.h
(+3640 files in other folders)
